Qualidade de software (todos os arquivos .java): Melhorias no uso de atributos da classe; Melhoria no nome de atributos; Melhorias nos comentarias e em sua organização no código.